# paper_pdf_ingest

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/memory/: 2026-06-02_ci_ruff_checks.md
.claude/rules/: MEMORY.md
.github/workflows/: ci.yml
src/paper_pdf_ingest/: __init__.py  __main__.py  convert.py  output.py  sections.py  utils.py
src/paper_pdf_ingest/figures/: __init__.py  _crop.py  _map.py  _render.py
tests/: conftest.py
tests/e2e/: conftest.py  test_ieee_conference.py  test_liang_planar.py  test_wang_hairpin.py
tests/unit/: test_convert.py  test_figures.py  test_output.py  test_sections.py  test_utils.py
